LogEntries now is here :)
