# openapi/spec.yaml
@@ -53,7 +53,16 @@ paths:
       responses:
         '200':
           description: Empty
-
+  /requestlog/{user_id}:
+    get:
+      summary: Get user log
+      description: Like post
+      operationId: app.views.requestlog
+      parameters:
+        - $ref: '#/components/parameters/user_id'
+      responses:
+        '200':
+          description: Empty
   /signup:
     post:
       summary: User signup
@@ -82,6 +91,13 @@ components:
     post_id:
       in: path
       name: post_id
+      required: true
+      schema:
+        type: integer
+
+    user_id:
+      in: path
+      name: user_id
       required: true
       schema:
         type: integer
